[gd_scene load_steps=8 format=3 uid="uid://56apib0buhy5"]

[ext_resource type="Script" uid="uid://b0t5k3p2g4g1s" path="res://Scripts/main_menu.gd" id="1_tself"]
[ext_resource type="Texture2D" uid="uid://c7mc0k0itu052" path="res://Textures/Menu/Main Menu.png" id="2_7jtkx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48xlc"]
texture = ExtResource("2_7jtkx")
modulate_color = Color(0.860369, 0.860369, 0.860369, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_28flt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28flt"]
bg_color = Color(0.674815, 0.674815, 0.674815, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.321569)
shadow_size = 6
shadow_offset = Vector2(0, 3.335)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.501407, 0.501406, 0.501406, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.321569)
shadow_size = 6
shadow_offset = Vector2(0, 3.335)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erv1k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.321569)
shadow_size = 6
shadow_offset = Vector2(0, 3.335)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tself")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_48xlc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -318.0
offset_right = 189.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_28flt")
theme_override_styles/hover = SubResource("StyleBoxFlat_28flt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_28flt")
theme_override_styles/hover = SubResource("StyleBoxFlat_28flt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Instructions"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_28flt")
theme_override_styles/hover = SubResource("StyleBoxFlat_28flt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
